--- a/FileNameTagger/FileNameTagger/Files/FilesView.xaml
+++ b/FileNameTagger/FileNameTagger/Files/FilesView.xaml
@@ -4,9 +4,26 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FileNameTagger.Files"
+             xmlns:viewModel ="clr-namespace:FileNameTagger.FilesViewModel" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <local:FilesViewModel x:Key="vm"/>
+    </UserControl.Resources>
+    <UserControl.DataContext>
+        <Binding Source="{StaticResource vm}"/>
+    </UserControl.DataContext>
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0" Background="Orange">
+            <Label Content="UserControlB" Height="30" Width="Auto" Foreground="White"/>
+        </Grid>
+        <Grid Grid.Row="1" Margin="15" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Label Height="100" Width="Auto" Content="{Binding ContentA}" FontSize="16"/>
+        </Grid>
+
     </Grid>
 </UserControl>
