--- a/FileNameTagger/FileNameTagger/MainWindow.xaml
+++ b/FileNameTagger/FileNameTagger/MainWindow.xaml
@@ -51,8 +51,8 @@
         CornerRadius="12">
 
     <StackPanel>
-        <Menu>
-            <MenuItem Header="_File">
+            <Menu Margin="0,0,0,20">
+                <MenuItem Header="_File" Style="{StaticResource MenuButtonTheme}" >
                 <MenuItem Header="_Load File"
                           Command ="{Binding AddFileCommand}">
                 </MenuItem>
