--- a/FileNameTagger/FileNameTagger/App.xaml
+++ b/FileNameTagger/FileNameTagger/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FileNameTagger"
+             xmlns:shared="clr-namespace:Shared;assembly=Shared"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -12,7 +13,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            
+            <shared:InverseBooleanConverter x:Key ="InverseBooleanConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
