--- a/FileNameTagger/FileNameTagger/MainWindow.xaml
+++ b/FileNameTagger/FileNameTagger/MainWindow.xaml
@@ -61,21 +61,22 @@
                 </CheckBox>
             </Grid>
         </DataTemplate>
-        <!--For data binding the enum-->
+        <!--For data binding the resolution enum-->
         <ObjectDataProvider x:Key="dataFromEnum" MethodName="GetValues"
                         ObjectType="{x:Type system:Enum}">
             <ObjectDataProvider.MethodParameters>
                 <x:Type TypeName="shared:ResolutionsEnum"/>
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
-
+        <DataTemplate DataType="{x:Type local:ArtistsViewModel}">
+            <local:ArtistsView/>
+        </DataTemplate>
     </Window.Resources>
     <Window.DataContext>
         <local:MainWindowViewModel/>
     </Window.DataContext>
-
     <Border Background="RoyalBlue">
-        <StackPanel>
+       <!-- <StackPanel>
             <Menu Margin="0,0,0,20">
                 <MenuItem Header="_File" Style="{StaticResource MenuButtonTheme}" >
                     <MenuItem Header="_Load File"
@@ -213,8 +214,24 @@
                             </Grid>
                         </StackPanel>
                     </Expander>
-                    <Label>Release Date:</Label>
-                    <DatePicker SelectedDate="{Binding ReleaseDate}" ></DatePicker>
+                        <Label>Release Date:</Label>
+                    <CheckBox IsChecked="{Binding ReleaseDateYearOnly, UpdateSourceTrigger=PropertyChanged}">Year Only?</CheckBox>
+                    <DatePicker Visibility="{Binding DatePickerVisibility}" SelectedDate="{Binding ReleaseDate}" SelectedDateFormat="Short" ></DatePicker>
+                    <ComboBox Text="Choose Year" Visibility="{Binding YearComboBoxVisibility}" SelectedItem="{Binding ReleaseYear}">
+                        <ComboBoxItem>2010</ComboBoxItem>
+                        <ComboBoxItem>2011</ComboBoxItem>
+                        <ComboBoxItem>2012</ComboBoxItem>
+                        <ComboBoxItem>2013</ComboBoxItem>
+                        <ComboBoxItem>2014</ComboBoxItem>
+                        <ComboBoxItem>2015</ComboBoxItem>
+                        <ComboBoxItem>2016</ComboBoxItem>
+                        <ComboBoxItem>2017</ComboBoxItem>
+                        <ComboBoxItem>2018</ComboBoxItem>
+                        <ComboBoxItem>2019</ComboBoxItem>
+                        <ComboBoxItem>2020</ComboBoxItem>
+                        <ComboBoxItem>2021</ComboBoxItem>
+                        <ComboBoxItem>2022</ComboBoxItem>
+                    </ComboBox>
                     <Grid x:Name="ExportedTag">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
@@ -225,6 +242,7 @@
                     </Grid>
                 </StackPanel>
             </Grid>
-        </StackPanel>
+        </StackPanel> -->
+        <ContentControl Content="{Binding CurrentViewModel}"/>
     </Border>
 </Window>
